# wpfxm

./: .babelrc.json  .env  .gitignore  Cargo.toml  README.md  default.nix  package.json  rollup.config.main.js  rollup.config.renderer.js  shell.nix  tsconfig.json
public/: index.html
src/: config.rs  display.rs  err.rs  error.rs  hook.rs  index.tsx  input.rs  log.rs  main.js  main.rs  prefix.rs  util.rs
src/command/: add.rs  cfg.rs  clean.rs  exec.rs  hook.rs  ls.rs  mod.rs  new.rs  rm.rs  run.rs
src/core/: main.ts  tsconfig.json
src/core/prefix/: prefix.ts
src/main/: main.ts  preload.ts  tsconfig.json  util.ts  window.ts
src/main/ipc/: prefix.ts
src/main/ipc/prefix/: application.ts  (+1 more)
src/prefix/: application.rs  hook.rs  mod.rs  scan.rs
src/renderer/: tsconfig.json  util.ts
src/renderer/components/: App.tsx  ErrorModal.module.scss  ErrorModal.tsx  base.scss
src/renderer/types/: error.ts
src/shared/: config.ts  types.d.ts
src/shared/ipc/: application.ts  event.ts  prefix.ts
src/tui/: backend.rs  mod.rs
src/tui/component/: applications.rs  hooks.rs  mod.rs  prefix_applications.rs  prefix_list.rs  tabs.rs
src/tui/panel/: add.rs  mod.rs
src/ui/: App.scss  App.tsx  ErrorModal.module.scss  ErrorModal.tsx  base.scss
src/ui/MainPanel/: MainPanel.module.scss
src/ui/PrefixList/: PrefixList.module.scss  PrefixList.tsx
src/ui/Settings/: PrefixPath.module.scss  PrefixPath.tsx  Settings.module.scss  Settings.tsx
src/ui/SidePanel/: Header.module.scss  Header.tsx  PrefixList.module.scss  PrefixList.tsx  SidePanel.tsx
src/util/: dir.rs  mod.rs
(+22 files in other folders)
