[package]
name = "wpfxm"
version = "0.1.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
clap = "~2.33.0"
colored = "~1.8.0"
dirs = "~2.0.0"
failure = "~0.1.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
toml = "~0.5.0"

[dependencies.hashbrown]
version = "~0.4.0"
features = ["serde"]

[profile.release]
codegen-units = 1
lto = true

[features]
no_colors = ["colored/no-color"]