[package]
name = "wpfxm"
version = "0.0.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
chrono = "~0.4.0"
dirs = "~2.0.0"
generic-array = "~0.13.0"
once_cell = "~1.3.0"
serde = "~1.0.0"
serde_derive = "~1.0.0"
smallvec = "~1.2.0"
snafu = "~0.6.0"
termion = "~1.5.0"
toml = "~0.5.0"
tui = "~0.8.0"
typenum = "~1.11.0"

[profile.release]
codegen-units = 1
lto = true
