[package]
name = "wpfxm"
version = "0.0.0"
authors = ["Acizza <jgit@tuta.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "~0.4.0"
dirs-next = "1.0"
once_cell = "1.4"
serde = "~1.0.0"
serde_derive = "~1.0.0"
smallvec = "1.4"
termion = "~1.5.0"
toml = "~0.5.0"
tui = "0.10"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
